# kdexg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  start-ubuntu-vm.sh
kernel/: .Module.symvers.cmd  .kdexg.ko.cmd  .kdexg.mod.cmd  .kdexg.mod.o.cmd  .kdexg.o.cmd  .modules.order.cmd  CMakeLists.txt  Makefile  kdexg.c  kdexg_main.c
kernel/src/: defines.h
kernel/src/communication/: communication.c  communication.h
kernel/src/policy/: policy.h
user/: CMakeLists.txt  kdexgctl.c
user/daemon/: CMakeLists.txt  kdexg_daemon.c
user/daemon/src/: daemon_state.h  defines.h
user/daemon/src/communication/: communication.c  communication.h
user/daemon/src/policy_list/: policy_list.c  policy_list.h
user/daemon/src/watcher/: watcher.c  watcher.h
user/kdexgctl/: CMakeLists.txt  kdexgctl.c
user/kdexgctl/src/: defines.h
user/shared/helpers/: helpers.c
user/shared/json/: json.h
user/src/: defines.h
user/src/helpers/: helpers.c  helpers.h
user/src/json/: json.c  json.h
